--- a/asset/overlay/etc/skel/.config/fontconfig/conf.d/50-font-match-order.conf
+++ b/asset/overlay/etc/skel/.config/fontconfig/conf.d/50-font-match-order.conf
@@ -21,7 +21,7 @@ fc-match sans -a | less
 		<test name="family"><string>sans-serif</string></test>
 		<edit name="family" mode="prepend" binding="strong">
 
-			<!-- <string>DejaVu Sans</string> //-->
+			<string>DejaVu Sans</string>
 
 			<!-- <string>Ubuntu</string> //-->
 
@@ -59,7 +59,7 @@ fc-match serif -a | less
 		<test name="family"><string>serif</string></test>
 		<edit name="family" mode="prepend" binding="strong">
 
-			<!-- <string>DejaVu Serif</string> //-->
+			<string>DejaVu Serif</string>
 
 			<!-- <string>Ubuntu</string> //-->
 
