--- a/asset/overlay/etc/skel/.config/lxqt/lxqt.conf
+++ b/asset/overlay/etc/skel/.config/lxqt/lxqt.conf
@@ -15,7 +15,7 @@ window_text_color=#f2f1f0
 
 [Qt]
 font="Sans,12,-1,5,50,0,0,0,0,0"
-style=kvantum-dark
+style=gtk2
 
 [Screensaver]
 lock_command=/usr/bin/true
